Bug on editor[mini] height when soft wrap is enabled. Fixes #70

--- a/styles/editor.less
+++ b/styles/editor.less
@@ -9,7 +9,7 @@ atom-text-editor[mini], atom-text-editor[mini]::shadow {
     border: none;
     border-radius: 0;
     font-size: 12px;
-    height: 36px;
+    min-height: 36px;
     padding: 5px 0;
     max-height: none;
     box-shadow: inset 0 -1px 0 0 fade(@text-color, 10%);
